--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
                             <div class="csi-single-service">
-                                <span class="icon"><i class="fa fa-map-signs" aria-hidden="true"></i></span>
+                                <span class="icon"><i class="fa fa-connectdevelop" aria-hidden="true"></i></span>
                                 <div class="text-area">
-                                    <h2 class="title"><a href="#">LOMBA AP</a></h2>
+                                    <h2 class="title"><a href="#">TRAINING IP TRANSPORT</a></h2>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi pariatur, minus ea nostrum qui illum eaque amet veritatis ipsam quaerat. Ex quam voluptate quod eos architecto libero explicabo excepturi exercitationem!</p>
                                     <a class="csi-btn-simple" href="#">Read More</a>
                                 </div>
@@ -260,9 +260,9 @@
                         </div>
                         <div class="col-xs-12 col-sm-4">
                             <div class="csi-single-service">
-                                <span class="icon"><i class="fa fa-cogs " aria-hidden="true"></i></span>
+                                <span class="icon"><i class="fa fa-microchip " aria-hidden="true"></i></span>
                                 <div class="text-area">
-                                    <h2 class="title"><a href="#">RESEARCH GROUP EXPO</a></h2>
+                                    <h2 class="title"><a href="#">Internet Of Things Competition</a></h2>
                                     <p>Etiam vel ante ac lacus vestibulum rutrum. Aliquam vehicula, massa in auctor dapibus commodo quis vehicula lacus. </p>
                                     <a class="csi-btn-simple" href="#">Read More</a>
                                 </div>
@@ -900,15 +900,12 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque maiores sapiente
                                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
 
                                     <div class="csi-copyright">
-                                        <p class="text">© 2019 proudly powered by <a href="https://riodel0rd.com">IT TEAM RG FESTIVAL</a></p>
+                                        <p class="text">© 2019 proudly powered by <a href="#">IT TEAM RG FESTIVAL</a></p>
                                     </div>
                                 </div>
                             </div>
