--- a/index.html
+++ b/index.html
@@ -93,15 +93,9 @@
                                     </div>
                                     <div class="collapse navbar-collapse">
                                         <ul class="nav navbar-nav csi-nav">
-                                            <li class="dropdown">
-                                                <a href="#" class="dropdown-toggle active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="index.html">Home Default</a></li>
-                                                    <li><a href="home-slider.html">Home Slider</a></li>
-                                                    <li><a href="home-typed.html">Home Typed</a></li>
-                                                    <li><a href="home4.html">Home Four</a></li>
-                                                </ul>
-                                            </li>
+
+                                                    <li><a href="index.html">Home</a></li>
+
                                             <li class="dropdown">
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">pages <span class="caret"></span></a>
                                                 <ul class="dropdown-menu">
@@ -131,15 +125,7 @@
                                             </li>
                                             <li><a class="csi-scroll" href="#csi-about">About</a></li>
                                             <li><a class="csi-scroll" href="#csi-schedule">Schedule</a></li>
-                                            <li><a class="csi-scroll" href="#csi-speakers">Speakers</a></li>
-                                            <li><a class="csi-scroll" href="#csi-sponsors">Sponsores</a></li>
-                                            <li class="dropdown">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News <span class="caret"></span></a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="news-list.html">News List</a></li>
-                                                    <li><a href="news-single.html">News Single</a></li>
-                                                </ul>
-                                            </li>
+
                                             <li><a class="csi-scroll" href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
@@ -742,25 +728,25 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque maiores sapiente
                             <div class="col-xs-12">
                                 <div class="sponsors-area">
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor1.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor10.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor2.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor5.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor1.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor11.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor3.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor6.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor2.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor7.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor3.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor8.png" alt=""/></a>
                                     </div>
                                     <div class="single">
-                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor4.png" alt=""/></a>
+                                        <a class="" href="#"><img src="assets/img/sponsors/sponsor9.png" alt=""/></a>
                                     </div>
                                 </div>
                             </div>
@@ -768,7 +754,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque maiores sapiente
                         </div>
                         <!--//row-->
                         <div class="sponsors-btn-area">
-                            <a class="csi-btn csi-btn-big" href="#">Become A Sponsor</a>
+                            <a class="csi-btn csi-btn-big" href="#">Become A Sponsor Contact Us!</a>
                         </div>
                     </div>
                     <!--//container-->
